position qc qsv for argo
