# nodejs-server/api/openapi.core.yaml
@@ -2195,6 +2195,15 @@ paths:
         schema:
           type: string
           example: PALACE
+      - name: positionqc
+        in: query
+        description: Argo's position QC
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: number
+          example: 1
       - name: source
         in: query
         description: Experimental program source(s) to search for; document must match
@@ -4352,6 +4361,16 @@ components:
       schema:
         type: string
         example: PALACE
+    positionqc:
+      name: positionqc
+      in: query
+      description: Argo's position QC
+      required: false
+      style: form
+      explode: true
+      schema:
+        type: number
+        example: 1
     polygon:
       name: polygon
       in: query
